fixed bug with historypointer in stepper